--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a class="signin" href="#register" data-option="dataRegister" onclick="changeWindow(this)"><b>Sign in</b></a>
         <a class="about" href="#about"  data-option="aboutSection" onclick="openModel()"><b>
             
-                about
+                About
             
         </b></a>
         <a class="setting" href="#setting" data-option="settingSection" onclick="changeWindow(this)"><b>Settings</b></a>
@@ -136,13 +136,22 @@
         <!-- <section id="aboutSection">
 
         </section> -->
-        <div class="model" id="model">
+        <div class="model" id="model" style=" background-image: url(images/pacBackground1.jpg);  background-repeat: no-repeat;
+        background-size:500px 280px; text-align: center;">
             <div class="model-header">
-                <div class ="title"> about us</div>
+                <div class ="title" style="color: azure; font-family: cursive;font-size: 30px;"> About Us</div>
                 <button class="close-button" onclick="closeModel()">&times;</button>
             </div>
             <div class="model-body">
-                dfjlkfjdgj gfsdk; gsdfgfgsdgsdfg
+                <p style="color: azure; font-family: cursive;">Code and develop by Yarden Schwartz and Eden Mizrahi.
+                    <br>
+                    JQuery Plugin:
+                    <br>
+                    jQuery Template:
+                    <br>
+                    We had no difficulty in this work :)
+                    <br>
+                 </p>
             </div>
         </div>
         <div id="overlay"></div>
