--- a/index.html
+++ b/index.html
@@ -123,12 +123,16 @@
 
         <section id="gameSection" name="gameSection"style="display: none; background-color: blueviolet;">
             <div id="score">
-                <label for="lblScore">SCORE:</label>
+                <label for="lblScore">Score:</label>
                 <input id="lblScore" type="text" />
             </div>
             <div id="time">
-                <label for="lblTime">TIME:</label>
+                <label for="lblTime">Time:</label>
                 <input id="lblTime" type="text" />
+            </div>
+            <div id="live">
+                <label for="lblLive">Lives:</label>
+                <input id="lblLive" type="text" />
             </div>
             <div id="game">
                 <canvas id="canvas" height="600" width="600"></canvas>
