--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <tr>
                             <th ><label for="psw"><b>Password</b></label></th>
                             <th><input type="password" class="input-box"  
-                                id="register_password" name="register_password"></th>
+                                id="register_password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;&#9679;" name="register_password"></th>
                         </tr>
                         <tr>
                             <th ><label for="email"><b>Email</b></label></th>
@@ -122,6 +122,23 @@
         
 
         <section id="gameSection" name="gameSection"style="display: none; background-color: blueviolet;">
+            <br>
+            <br>
+            <br>
+            <br>
+            <!-- <div>
+            <table style="width:60%; margin: 0 auto;">
+                <tr>
+                    <th>  <label for="lblScore">Score:</label> </th>
+                    <th>  <input id="lblScore" type="text" /> </th>
+                    <th> <label for="lblTime">Time:</label> </th>
+                    <th> <input id="lblTime" type="text" /> </th>
+                    <th>  <label for="lblLive">Lives:</label> </th>
+                    <th>   <input id="lblLive" type="text" /> </th>
+                    <th></th>
+                </tr>
+            </table>
+            </div> -->
             <div id="score">
                 <label for="lblScore">Score:</label>
                 <input id="lblScore" type="text" />
@@ -134,6 +151,9 @@
                 <label for="lblLive">Lives:</label>
                 <input id="lblLive" type="text" />
             </div>
+            <br>
+            <br>
+            <br>
             <div id="game">
                 <canvas id="canvas" height="600" width="600"></canvas>
             </div>
