--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <label for="lblTime">Time:</label>
                 <input id="lblTime" type="text" />
             </div>
-            <div class="" style="float: left; display: flex;
+            <div class="board" style="float: left; display: flex;
             justify-content: center;">
            <div class="gameSetting">
           <div class="arrows">            
@@ -162,7 +162,7 @@
         </div>
            </div>
             <div id="game">
-                <canvas id="canvas" height="600" width="600"></canvas>
+                <canvas id="canvas" height="700" width="700"></canvas>
             </div>
         </div>
         </section>
