--- a/index.html
+++ b/index.html
@@ -130,12 +130,19 @@
                 <label for="lblScore">Score:</label>
                 <input id="lblScore" type="text" />
             </div>
+            <br>
             <div id="time">
                 <label for="lblTime">Time:</label>
                 <input id="lblTime" type="text" />
             </div>
-            <div class="" style="float: left; display: flex;
-            justify-content: center;">
+            <br>
+            <div id="lives">
+                <label for="lblLives">Lives:</label>
+                <input id="lblLives" type="text" />
+            </div>
+            <br>
+
+            <div class="board" style="float: left; display: flex; justify-content: center;">
            <div class="gameSetting">
           <div class="arrows">            
             <i id="up-arrow" class="fas fa-arrow-up"></i>
