--- a/index.html
+++ b/index.html
@@ -124,8 +124,14 @@
         </section>
         
 
-        <section id="gameSection" name="gameSection"style="display: none; background-color: blueviolet; height: 937px; padding-top: 5%;">
-            
+        <section id="gameSection" name="gameSection"style="display: none; background-color: blueviolet; height: 1500px; padding-top: 5%;">
+            <br>
+            <br>
+            <div id="user-login">
+                <label for="lblUserName">UserName:</label>
+                <input id="lblUserName" type="text" disabled="disabled" />
+            </div>
+            <br>
             <div id="score">
                 <label for="lblScore">Score:</label>
                 <input id="lblScore" type="text" />
@@ -136,9 +142,9 @@
                 <input id="lblTime" type="text" />
             </div>
             <br>
-            <div id="lives">
-                <label for="lblLives">Lives:</label>
-                <input id="lblLives" type="text" />
+            <div id="disqualification">
+                <label for="lblDisqualification">Disqualifications:</label>
+                <input id="lblDisqualification" type="text" value="0" disabled="disabled"/>
             </div>
             <br>
 
