--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
         </section>
         
 
-        <section id="gameSection" name="gameSection"style="display: none; height: 1200px; width: 100%; padding-top: 5%;background-image: url(images/back2.png);  background-size:cover;">
-          <div class="settingConteiner" style="width:900px; ">
+        <section id="gameSection" name="gameSection"style="display: none; height: 1100px; width: 100%; padding-top: 5%;background-image: url(images/back2.png);  background-size:cover;">
+          <div class="settingConteiner" style="width:900px;  margin-top: 100px;">
            
             <div id="user-login">
                 <label for="lblUserName">UserName:</label>
@@ -152,13 +152,13 @@
             <div id="disqualification">
                 <label for="lblDisqualification">Disqualifications:</label>
                 <input id="lblDisqualification" type="text" value="0" disabled="disabled"/>
-            </div>
+            </div>\
             <button type="button"  onclick="startNewGame()" class="newGame" >Start New Game</button>
             <div class="board" style="float: left; display: flex;
             justify-content: center; margin-bottom: 0px;">
            <div class="gameSetting">
           <div class="arrows">            
-            <i id="up-arrow" class="fas fa-arrow-up" ></i>
+            <i id="up-arrow" class="fas fa-arrow-up" "></i>
             <br>
             <i id="down-arrow" class="fas fa-arrow-down"></i>
             <br>
