--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
             <button type="button"  onclick="startNewGame()" class="newGame" >Start New Game</button>
             <div class="board" style="float: left; display: flex;
             justify-content: center; margin-bottom: 0px;">
-           <div class="gameSetting">
+           <div class="gameSetting" style="background-image: url(images/w1.png);  background-size:cover;">
           <div class="arrows">            
-            <i id="up-arrow" class="fas fa-arrow-up" "></i>
+            <i id="up-arrow" class="fas fa-arrow-up" ></i>
             <br>
             <i id="down-arrow" class="fas fa-arrow-down"></i>
             <br>
@@ -183,7 +183,10 @@
             <span class="setting-text">Total Time: </span><i id="totalTime"></i>
         </div>
            </div>
-            <div id="game">
+            <div id="game" style="background-image: url(images/w4.png);  background-size:cover;border: #8FBC8F solid 3px; border-radius: 10px;">
+
+        
+
                 <canvas id="canvas" height="700" width="700"></canvas>
             </div>
         </div>
