--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body class="body" style="padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
     <div id="overlay"></div>
 
-    <div class="page-header">
+    <div class="page-header" style="background-image: url('images/logo2.jpg');">
         <img class="logo-crop" src="images/logo2.jpg" alt="Pac-Man Logo">
     </div>
     <!-- <div class="game-header" style=" margin-top: -30px">
@@ -154,7 +154,7 @@
 
 
         </section>
-        
+
         <section id="dataRegister"
             style="display: none; background-image: url(images/pacman_background.jpg);  height: 1100px; width: 100%;   padding-top: 4%;">
 
@@ -305,7 +305,7 @@
                         <span class="setting-text">Total Time: </span><i id="totalTime"></i>
                         <br>
                         <br>
-                        <button type="button" class="newGame-bth" style="position: center;" onclick="readyToGame()">Start<br>New
+                        <button type="button" class="newGame-bth" style="position: center;" onclick="startNewGame()">Start<br>New
                             Game</button>
                     </div>
                 </div>
