--- a/index.html
+++ b/index.html
@@ -44,10 +44,16 @@
 
 <body class="body" style="padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
     <div id="overlay"></div>
+<header style=" background-image: url('images/logo2.jpg'); background-repeat: no-repeat;
+background-size: auto;
+-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;">    <div class="page-header" ></div>
+        <!-- <img class="logo-crop" src="images/logo2.jpg" alt="Pac-Man Logo"> -->
+    
+</header>
 
-    <div class="page-header" style="background-image: url('images/logo2.jpg');">
-        <img class="logo-crop" src="images/logo2.jpg" alt="Pac-Man Logo">
-    </div>
     <!-- <div class="game-header" style=" margin-top: -30px">
         <p><b>PAC-MAN Game Application</b></p>
     </div>
@@ -60,30 +66,30 @@
             
     </div> -->
     <div class="menuContext">
-        <div class="menu" id="menu">
-            <img id="pacman_icon" style="width: 80; height: 50px;  margin-top: +3px"
+        <div class="menu" id="menu" style="height: 85px;">
+            <img id="pacman_icon" style="width: 5%; height: 50px;  margin-top: +3px"
                 src="images/pacman_icon1_withoutBg.png">
-            <a class="welcome" href="#welcome" data-option="dataWelcome" onclick="changeWindow(this)"><b>Welcome</b></a>
-            <img id="pacman_icon" style="width: 80; height: 50px;    margin-top: 3px"
+            <a class="welcome" href="#welcome" data-option="dataWelcome" onclick="changeWindow(this)" style="width: 15%;"><b>Welcome</b></a>
+            <img id="pacman_icon" style="width: 5%; height: 50px;    margin-top: 3px"
                 src="images/pacman_icon1_withoutBg.png">
-            <a class="login" href="#login" data-option="dataLogin" onclick="changeWindow(this)"><b>Log in</b></a>
-            <img id="pacman_icon" style="width: 80; height: 50px;   margin-top: 3px"
+            <a class="login" href="#login" data-option="dataLogin" onclick="changeWindow(this)" style="width: 15%;"><b>Log in</b></a>
+            <img id="pacman_icon" style="width: 5%; height: 50px;   margin-top: 3px"
                 src="images/pacman_icon1_withoutBg.png">
 
-            <a class="signin" href="#register" data-option="dataRegister" onclick="changeWindow(this)"><b>Sign
+            <a class="signin" href="#register" data-option="dataRegister" onclick="changeWindow(this)" style="width: 15%;"><b>Sign
                     up</b></a>
-            <img id="pacman_icon" style="width: 80; height: 50px;   margin-top: 3px"
+            <img id="pacman_icon" style="width: 5%; height: 50px;   margin-top: 3px"
                 src="images/pacman_icon1_withoutBg.png">
 
-            <a class="about" href="#about" data-option="aboutSection" onclick="openModel()"><b>
+            <a class="about" href="#about" data-option="aboutSection" onclick="openModel()" style="width: 15%;"><b>
 
                     About
 
                 </b></a>
-            <img id="pacman_icon" style="width: 80; height: 50px;   margin-top: 3px"
+            <img id="pacman_icon" style="width: 5%; height: 50px;   margin-top: 3px"
                 src="images/pacman_icon1_withoutBg.png">
 
-            <a class="setting" href="#setting" data-option="settingSection"
+            <a class="setting" href="#setting" data-option="settingSection" style="width: 15%;"
                 onclick="changeWindow(this)"><b>Settings</b></a>
 
         </div>
