--- a/index.html
+++ b/index.html
@@ -328,12 +328,12 @@
                         <div style="display:none; z-index: +1;">
                             <img id="monster-img" src="./images/monster4.jpg" width="300" height="227"
                                 style="z-index: +1; position: relative;">
-                            <img id="monster2-img" src="./images/monster2.jpg" width="300" height="227"
+                            <!-- <img id="monster2-img" src="./images/monster2.jpg" width="300" height="227"
                                 style="z-index: +1; position: relative;">
                             <img id="monster3-img" src="./images/monster3.jpg" width="300" height="227"
                                 style="z-index: +1; position: relative;">
                             <img id="monster4-img" src="./images/monster5.jpg" width="300" height="227"
-                                style="z-index: +1; position: relative;">
+                                style="z-index: +1; position: relative;"> -->
                         </div>
                     </div>
                 </div>
