--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@
                                             height="30"></td>
                                     <td><img id="pacman5" src="./images/pacman_icon_withoutBG.png" width="30"
                                             height="30"></td>
+                                    <td><img style="display: none;" id="pacman6" src="./images/pacman_icon_withoutBG.png" width="30"
+                                                height="30"></td>
                                 </tr>
                             </table>
                         </div>
