--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/dataRegister.css" />
-    <link rel="stylesheet" type="text/css" href="css/dataWelcome.css" />
-    <link rel="stylesheet" type="text/css" href="css/setting.css" />
-    <link rel="stylesheet" type="text/css" href="css/datalogin.css" />
-    <link rel="stylesheet" type="text/css" href="css/about.css" />
-    <link rel="stylesheet" type="text/css" href="css/app.css" />
-    <link rel="stylesheet" type="text/css" href="css/endGame.css" />
-    <link rel="stylesheet" type="text/css" href="css/welcome.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/dataRegister.css" />
+    <link rel="stylesheet" type="text/css" href="/css/dataWelcome.css" />
+    <link rel="stylesheet" type="text/css" href="/css/setting.css" />
+    <link rel="stylesheet" type="text/css" href="/css/datalogin.css" />
+    <link rel="stylesheet" type="text/css" href="/css/about.css" />
+    <link rel="stylesheet" type="text/css" href="/css/app.css" />
+    <link rel="stylesheet" type="text/css" href="/css/endGame.css" />
+    <link rel="stylesheet" type="text/css" href="/css/welcome.css" />
 
 
     <meta charset="UTF-8">
