--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel="stylesheet" type="text/css" href="./style/style.css" />
     
-    <link rel="stylesheet" type="text/css" href="style/dataRegister.css" />
-    <link rel="stylesheet" type="text/css" href="style/dataWelcome.css" />
-    <link rel="stylesheet" type="text/css" href="style/setting.css" />
+    <link rel="stylesheet" type="text/css" href="./style/dataRegister.css" />
+    <link rel="stylesheet" type="text/css" href="./style/dataWelcome.css" />
+    <link rel="stylesheet" type="text/css" href="./style/setting.css" />
     <link rel="stylesheet" type="text/css" href="style/datalogin.css" />
 
     
-    <link rel="stylesheet" type="text/css" href="style/about.css" />
-    <link rel="stylesheet" type="text/css" href="style/app.css" />
-    <link rel="stylesheet" type="text/css" href="style/endGame.css" />
-    <link rel="stylesheet" type="text/css" href="style/welcome.css" />
+    <link rel="stylesheet" type="text/css" href="./style/about.css" />
+    <link rel="stylesheet" type="text/css" href="./style/app.css" />
+    <link rel="stylesheet" type="text/css" href="./style/endGame.css" />
 
 
     <meta charset="UTF-8">
