--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
     
     <link rel="stylesheet" type="text/css" href="./style/dataRegister.css" />
+    <link rel="stylesheet" type="text/css" href="./style/dataLogin.css">
     <link rel="stylesheet" type="text/css" href="./style/dataWelcome.css" />
     <link rel="stylesheet" type="text/css" href="./style/setting.css" />
-    <link rel="stylesheet" type="text/css" href="style/datalogin.css" />
 
     
     <link rel="stylesheet" type="text/css" href="./style/about.css" />
