--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="datawelcome.css" />
     <link rel="stylesheet" type="text/css" href="dataLogin.css" />
     <link rel="stylesheet" type="text/css" href="dataRegister.css" />
-    <link rel="stylesheet" type="text/css" href="dataWelcome.css" />
     <link rel="stylesheet" type="text/css" href="setting.css" />
-
-    
     <link rel="stylesheet" type="text/css" href="about.css" />
     <link rel="stylesheet" type="text/css" href="app.css" />
     <link rel="stylesheet" type="text/css" href="endGame.css" />
