--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="datawelcome.css" />
-    <link rel="stylesheet" type="text/css" href="dataLogin.css" />
-    <link rel="stylesheet" type="text/css" href="dataRegister.css" />
-    <link rel="stylesheet" type="text/css" href="setting.css" />
-    <link rel="stylesheet" type="text/css" href="about.css" />
-    <link rel="stylesheet" type="text/css" href="app.css" />
-    <link rel="stylesheet" type="text/css" href="endGame.css" />
+    <link rel="stylesheet" type="text/css" href="./style/style.css" />
+    <link rel="stylesheet" type="text/css" href="./style/datawelcome.css" />
+    <link rel="stylesheet" type="text/css" href="./style/dataLogin.css" />
+    <link rel="stylesheet" type="text/css" href="./style/dataRegister.css" />
+    <link rel="stylesheet" type="text/css" href="./style/setting.css" />
+    <link rel="stylesheet" type="text/css" href="./style/about.css" />
+    <link rel="stylesheet" type="text/css" href="./style/app.css" />
+    <link rel="stylesheet" type="text/css" href="./style/endGame.css" />
 
 
     <meta charset="UTF-8">
