--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     </table>
                 </form>
                 <br>
-                <button type="submit" onclick="login()" class="loginB">Insert to game</button>
+                <button type="submit" onclick="login()" class="loginB">Login</button>
 
             </div>
 
