--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
          float: left; border: 2px solid white; border-radius: 60px; background-color: black;">
                 <tr>
                     <th> <label for="lblUserName" style="font-size: 30px; color: red;"><strong>Welcome </strong></label></th>
-                    <!-- <th style="font-size: 30px; color: red;"> <i id="lblUserName" ></i>&nbsp;! </th> -->
-                    <th> <label id="lblUserName" type="text" style="font-size: 30px; color: red;" disabled="disabled"></th>
+                    <th> <input id="lblUserName" type="text" disabled="disabled"></th>
                     <th> <label for="lblScore">Score:</label></th>
                     <th> <input id="lblScore" type="text" disabled="disabled" /></th>
                     <th> <label for="lblTime">Time:</label> </th>
