--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <p style="color: azure; font-family: cursive;">
                     Code and develop by Yarden Schwartz and Eden Mizrahi.
                     <br>
-                    <strong>JQuery Plugin:</strong> jquery.validate for login and registration form validation. 
+                    <strong>JQuery Plugin:</strong> "jquery.validate" for login and registration form validation. 
                     <br>
                     <strong>jQuery Template:</strong> none
                     <br>
