--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <!-- <script src="https://kit.fontawesome.com/f35a"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>PAC-MAN Game</title>
+    <title>PAC-MAN Game </title>>
+    
+
+
 
 </head>
 
